--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+div {
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+button {
+  width: 100px;
+}
